# cookie-cutters

./: .gitignore  README.md
cutters/javascript/ts-react-component/: cookiecutter.json
cutters/juce/AudioPlugin/: cookiecutter.json
cutters/juce/ConsoleApp/: cookiecutter.json
cutters/juce/GuiApp/: cookiecutter.json
cutters/py-project/{{cookiecutter.project_name}}/: .gitignore  Makefile  README.rst
cutters/py-rest/: cookiecutter.json
cutters/py-rest/{{cookiecutter.project_name}}/: Dockerfile  alembic.ini  pyproject.toml
cutters/py-rest/{{cookiecutter.project_name}}/docs/source/: conf.py
cutters/py-rest/{{cookiecutter.project_name}}/scripts/: lint.sh  start.sh  test_unit.sh
cutters/py-rest/{{cookiecutter.project_name}}/tests/unit/: test_utils.py  test_validate.py
cutters/py-rest/{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: app.py  openapi.py  utils.py  validate.py
cutters/py-rest/{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/db/: schema.py
cutters/py-rest/{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/db/migrations/versions/: bba199ab9e7e_.py
cutters/python/simple-project/{{cookiecutter.project_name}}/: pyproject.toml
cutters/python/simple-project/{{cookiecutter.project_name}}/docs/source/: index.rst
cutters/react-app/: cookiecutter.json
cutters/react-app/{{cookiecutter.app_slug}}/: Makefile  README.md  declarations.d.ts  jest.config.js  package.json  webpack.config.js
cutters/ts-express/: cookiecutter.json
cutters/ts-express/{{cookiecutter.project_name}}/: .eslintignore  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
scripts/: ckct
(+89 files in other folders)
